@@ -4,6 +4,7 @@
 	Bug #8630  	Executing a query with the SchemaOnly option reads the entire resultset	[fixed]
 	Bug #7398  	MySqlParameterCollection doesn't allow parameters without filled in names [fixed]
 	Fixed problem parsing stored procedure parameter defs such as OUT val INT  UNSIGNED
+	Bug #7623  	Adding MySqlParameter causes error if MySqlDbType is Decimal [fixed]
 	Now supports the new decimal type introduced in 5.0.3
 	
 1-20-05 - Version 1.0.4  
